# FONotes

./: Cargo.toml  README.md  build.sh  shell.nix
src/: main.rs
