[package]
name = "fonotes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.3.2"
winit = "0.29.15"
tiny-skia = "0.11.4"
softbuffer = "0.4.2"
rdev = "0.5.3"
fontdue = "0.8.0"
send_wrapper = { version = "0.6.0", features = ["futures"] }